# SDSC-arthur-project-1

./: .env  .env.example  .gitignore  pyproject.toml  requirements-OLD.txt  requirements.txt  requirements_locked.txt  setup_env.sh
ai_assistance/: context_arborescence.txt  context_code.txt  dump_context.py
archive_scripts/: run_pca_vs_ae.py
experiments/: pca_testiris.py  regression_testscikit.py  test.py
scripts/: autoencoder_script.py  pca_logistic_script.py  pca_vsautoencoder.py  registration_script.py  run_ae_hyperparam.py  run_autoencoder.py  run_comparison_aepca.py  run_imagetreatment.py  run_pca_spatial.py  run_pca_temporal.py  run_registration.py  run_registration_pipelinechecks.py  visualizeMRI_script.py
sdsc_arthur_project.egg-info/: PKG-INFO  SOURCES.txt
src/: autoencoder_functions.py  autoencoder_script.py  config.py  image_treatment.py  imagetreatment_functions.py  imagetreatment_script.py  import_data.py  importdata_functions.py  paths.py  pca.py  pca_eachpatient.py  pca_eachpatient_functions.py  pca_eachpatient_script.py  pca_functions.py  pca_logistic_functions.py  pca_logistic_script.py  pca_script.py  pca_temporal.py  pca_test_iris.py  pca_testiris.py  pca_vsautoencoder.py  registration_functions.py  registration_script.py  regression_testscikit.py  test.py  various_plots.py  visualizeMRI_functions.py  visualizeMRI_script.py  visualize_data.py
src/archive/: pca_OLD.py  pca_eachpatient_OLD.py  registration_functions_OLD.py  registration_script_OLD.py  resampling_functions_OLD.py  visualize_data_OLD.py
src/data/: geometry.py  imagetreatment.py  (+3 more)
(+12 files in other folders)
