[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sdsc-arthur-project"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "scripts"]
venvPath = "/home/renku/work"
venv = ".venv"